move out of flask

--- a/chords.yaml
+++ b/chords.yaml
@@ -1,289 +1,1 @@
----
-- name: A
-  strings:
-    - O
-    - [3, 2]
-    - [1, 2]
-    - [2, 2]
-    - O
-    - X
-
-- name: A7
-  strings:
-    - O
-    - [3, 2]
-    - O
-    - [2, 2]
-    - O
-    - X
-
-- name: A7sus4
-  strings:
-    - [4, 3]
-    - [3, 3]
-    - [2, 2]
-    - [1, 2]
-    - O
-    - X
-
-- name: A7sus4v1
-  strings:
-    - [4, 3]
-    - [3, 3]
-    - O
-    - [1, 2]
-    - O
-    - X
-
-- name: Am
-  strings:
-    - O
-    - [1, 1]
-    - [3, 2]
-    - [2, 2]
-    - O
-    - X
-
-- name: B
-  strings:
-    - X
-    - [3, 4]
-    - [3, 4]
-    - [3, 4]
-    - [1, 2]
-    - X
-
-- name: B7
-  strings:
-    - [4, 2]
-    - O
-    - [3, 2]
-    - [1, 1]
-    - [2, 2]
-    - X
-
-- name: Bm
-  strings:
-    - [1, 2]
-    - [2, 3]
-    - [3, 4]
-    - [4, 4]
-    - [1, 2]
-    - X
-
-- name: C
-  strings:
-    - O
-    - [1, 1]
-    - O
-    - [2, 2]
-    - [3, 3]
-    - X
-
-- name: C7
-  strings:
-    - O
-    - [1, 1]
-    - [4, 3]
-    - [2, 2]
-    - [3, 3]
-    - X
-
-- name: Cadd9
-  strings:
-    - [4, 3]
-    - [3, 3]
-    - O
-    - [1, 2]
-    - [2, 3]
-    - X
-
-- name: C/G
-  strings:
-    - O
-    - [1, 1]
-    - O
-    - [2, 2]
-    - [4, 3]
-    - [3, 3]
-
-- name: Cm
-  strings:
-    - [1, 3]
-    - [2, 4]
-    - [4, 5]
-    - [3, 5]
-    - [1, 3]
-    - X
-
-- name: D
-  strings:
-    - [3, 2]
-    - [2, 3]
-    - [1, 2]
-    - O
-    - X
-    - X
-
-- name: Dsus4
-  strings:
-    - [4, 3]
-    - [3, 3]
-    - [1, 2]
-    - O
-    - X
-    - X
-
-- name: D/F♯
-  strings:
-    - [3, 2]
-    - [2, 3]
-    - [1, 2]
-    - O
-    - O
-    - [T, 2]
-
-- name: Dadd11/F♯
-  strings:
-    - [4, 3]
-    - [3, 3]
-    - [2, 2]
-    - O
-    - X
-    - [1, 2]
-
-- name: Dm
-  strings:
-    - [1, 1]
-    - [4, 3]
-    - [2, 2]
-    - O
-    - X
-    - X
-
-- name: E
-  strings:
-    - O
-    - O
-    - [1, 1]
-    - [3, 2]
-    - [2, 2]
-    - O
-
-- name: E7
-  strings:
-    - O
-    - O
-    - [1, 1]
-    - O
-    - [2, 2]
-    - O
-
-- name: Em
-  strings:
-    - O
-    - O
-    - O
-    - [3, 2]
-    - [2, 2]
-    - O
-
-- name: Em7
-  strings:
-    - [4, 3]
-    - [3, 3]
-    - O
-    - [2, 2]
-    - [1, 2]
-    - O
-
-- name: E♭
-  strings:
-    - [3, 3]
-    - [4, 4]
-    - [2, 3]
-    - [1, 1]
-    - X
-    - X
-
-- name: F
-  strings:
-    - [1, 1]
-    - [1, 1]
-    - [2, 2]
-    - [3, 3]
-    - [4, 3]
-    - [1, 1]
-
-- name: Fmaj7
-  strings:
-    - O
-    - [1, 1]
-    - [2, 2]
-    - [3, 3]
-    - X
-    - X
-
-- name: Fmaj7sus2
-  strings:
-    - O
-    - [1, 1]
-    - O
-    - [3, 3]
-    - X
-    - X
-
-- name: F6/9
-  strings:
-    - [4, 3]
-    - [3, 3]
-    - [1, 2]
-    - [2, 3]
-    - X
-    - X
-
-- name: F♯m
-  strings:
-    - [1, 2]
-    - [1, 2]
-    - [1, 2]
-    - [3, 4]
-    - [4, 4]
-    - [1, 2]
-
-- name: G
-  strings:
-    - [4, 3]
-    - [3, 3]
-    - O
-    - O
-    - [1, 2]
-    - [2, 3]
-
-- name: G weak
-  strings:
-    - [4, 3]
-    - O
-    - O
-    - O
-    - X
-    - [3, 3]
-
-- name: G5
-  strings:
-    - [4, 3]
-    - [3, 3]
-    - O
-    - O
-    - X
-    - [2, 3]
-
-- name: G7
-  strings:
-    - [1, 1]
-    - O
-    - O
-    - O
-    - [2, 2]
-    - [3, 3]
-
+../chords.yaml
